Fix button z-index issue
When scolled, the buttons were going over the blue title

--- a/frontend/src/app/events/events.component.css
+++ b/frontend/src/app/events/events.component.css
@@ -11,7 +11,6 @@
     flex-direction: column;
     justify-content: right;
     align-items: flex-end;
-    z-index: 1;
     position:absolute;
     top: 10px;
     right: 20px;
